20031028 timer.c: ensure we have the prototype for strerror().
20031029 osssound.c, sdlsound.c, sunsound.c: ensure that we don't try and
	 recursively open the sound device if an error occurs when opening
	 it.
20031029 timer.c: fix typos in Win32 time routines (Marek).
20031029 trdos.c, utils.c: don't assume temp path ends with a slash
	 (Marek).
20031029 settings.pl, utils.[ch], ui/uijoystick.c: add and use
	 utils_get_home_path function.
20031030 machine.c, utils.c: make machine_find_rom and utils_find_lib work
	 if argv[0] is a full path.
20031030 Merge machine_find_rom and utils_find_lib into one
	 utils_find_auxiliary_file routine.
20031030 ui/ui.h, ui/gtk/gtkui.c, ui/gtk/statusbar.c: add 'pause'
	 functionality.
20031101 dxsound.[ch], Makefile.am, configure.in: DirectX sound routines
	 (Marek).
20031102 debugger/commandy.y, z80/z80.pl, z80/z80_macros.h: rename the
	 IN and OUT macros to avoid clashing with Win32's windows.h.
20031102 Makefile.am: revert unintended commit of DIST_SUBDIRS change.
20031103 Makefile.am, ui/Makefile.am: add DIST_SUBDIRS so all user
	 interfaces etc get into the dist tarball (thanks, Erik Kunze).
20031103 rzx.c: add Win32 timing routines (Marek).
20031103 fuse.c: add Win32 uname-like routines (Marek).
20031105 configure.in: explicitly link in zlib if using libpng.
20031105 event.[ch], z80/z80.[ch], z80/z80.pl: prevent interrupts from
	 being accepted immediately after an EI.
20031106 event.[ch]: always reenable interrupts before sampling if both
	 events occur at the same tstate.
20031106 event.[ch], machine.c, rzx.c, scld.c, spectrum.[ch], z80/z80.c,
	 z80/z80_ops.c: add support for retriggered interrupts.
20031106 debugger/command.c, debugger/commandl.l: remove use of %option
	 noyywrap.
20031107 ui/uijoystick.c: fix typos (thanks, Erik Kunze).
20031107 event.[ch], spectrum.c, z80/coretest.c, z80/z80.[ch], z80/z80.pl:
	 improved retrigged interrupt support: interrupts no longer
	 accepted after an EI/EI or EI/DI sequence.